--- a/CommunityKitchen/Views/Cause/CauseDetails.cshtml
+++ b/CommunityKitchen/Views/Cause/CauseDetails.cshtml
@@ -54,7 +54,7 @@
                     <p>@Html.DisplayFor(model => model.FullDescription)</p>
                 </div>
 
-                <div class="donate-price"><b>@Html.DisplayFor(model => model.CurrentAmmount) </b>&nbsp; Raised of  <span> @Html.DisplayFor(model => model.TargetGoal)€ </span> Goal</div>
+                <div class="donate-price"><b>@Html.DisplayFor(model => model.CurrentAmmount) </b>&nbsp; Raised of  <span> @Html.DisplayFor(model => model.TargetGoal) </span> Goal</div>
                 <a class="thm-btn style-1" href="javascript:history.go(-1)"> Back to List </a>
             </div>
         </div>
