--- a/CommunityKitchen/Views/Cause/OrganizeCause.cshtml
+++ b/CommunityKitchen/Views/Cause/OrganizeCause.cshtml
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="section-title">
             <h1>organize <span>cause</span></h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+            <p>On this page you can manage ALL the CAUSES that are currently on our database, as well as create new ones.</p>
         </div>
 
         <div>
