--- a/CommunityKitchen/Views/Event/OrganizeEvents.cshtml
+++ b/CommunityKitchen/Views/Event/OrganizeEvents.cshtml
@@ -13,7 +13,7 @@
         <div class="section-title">
             <h5>going to raise humanity</h5>
             <h1>organize <span>event</span></h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
+            <p>On this page you can manage ALL the EVENTS that are currently on our database, as well as create new ones.</p>
         </div>
 
         <div>
